@@ -10,8 +10,8 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>A button for selecting a color.</summary>
+    <remarks>ColorPicker provides a button for selecting a color. When pressed, a dialog is opened allowing the user to select a color.</remarks>
   </Docs>
   <Base>
     <BaseTypeName>Gtk.Button</BaseTypeName>
@@ -45,11 +45,11 @@
         <Parameter Name="a" Type="System.Double" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="r">To be added: an object of type 'double'</param>
-        <param name="g">To be added: an object of type 'double'</param>
-        <param name="b">To be added: an object of type 'double'</param>
-        <param name="a">To be added: an object of type 'double'</param>
+        <summary>Set the color in the widget.</summary>
+        <param name="r">The red value to set.</param>
+        <param name="g">The green value to set.</param>
+        <param name="b">The blue value to set.</param>
+        <param name="a">The alpha value to set.</param>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -66,11 +66,11 @@
         <Parameter Name="a" Type="System.Byte" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="r">To be added: an object of type 'byte'</param>
-        <param name="g">To be added: an object of type 'byte'</param>
-        <param name="b">To be added: an object of type 'byte'</param>
-        <param name="a">To be added: an object of type 'byte'</param>
+        <summary>Set the color in the widget.</summary>
+        <param name="r">The red value to set.</param>
+        <param name="g">The green value to set.</param>
+        <param name="b">The blue value to set.</param>
+        <param name="a">The alpha value to set.</param>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -87,11 +87,11 @@
         <Parameter Name="a" Type="System.UInt16" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="r">To be added: an object of type 'ushort'</param>
-        <param name="g">To be added: an object of type 'ushort'</param>
-        <param name="b">To be added: an object of type 'ushort'</param>
-        <param name="a">To be added: an object of type 'ushort'</param>
+        <summary>Set the color in the widget.</summary>
+        <param name="r">The red value to set.</param>
+        <param name="g">The green value to set.</param>
+        <param name="b">The blue value to set.</param>
+        <param name="a">The alpha value to set.</param>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -129,7 +129,7 @@
       <ReturnValue />
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Create a new ColorPicker widget.</summary>
         <returns>To be added: an object of type 'Gnome.ColorPicker'</returns>
         <remarks>To be added</remarks>
       </Docs>
@@ -143,9 +143,9 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="value">To be added: an object of type 'uint'</param>
-        <returns>To be added: an object of type 'uint'</returns>
+        <summary>The green value for the color in the widget.</summary>
+        <param name="value">Value of the color in the range from 0 to 65535. </param>
+        <returns>The current value of the channel.</returns>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -158,9 +158,9 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="value">To be added: an object of type 'uint'</param>
-        <returns>To be added: an object of type 'uint'</returns>
+        <summary>The alpha value for the color in the widget.</summary>
+        <param name="value">Value of the color in the range from 0 to 65535. </param>
+        <returns>The current value of the channel.</returns>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -173,9 +173,9 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="value">To be added: an object of type 'string'</param>
-        <returns>To be added: an object of type 'string'</returns>
+        <summary>The title to be displayed on the color selection dialog.</summary>
+        <param name="value">The text to use.</param>
+        <returns>Current text to be used for the color selection dialog.</returns>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -188,9 +188,9 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="value">To be added: an object of type 'bool'</param>
-        <returns>To be added: an object of type 'bool'</returns>
+        <summary>Whether the sample is dithered or simply a solid color.</summary>
+        <param name="value">Whether to dither or not.</param>
+        <returns>Current dither settings for the widget.</returns>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -203,9 +203,9 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="value">To be added: an object of type 'uint'</param>
-        <returns>To be added: an object of type 'uint'</returns>
+        <summary>The blue value for the color in the widget.</summary>
+        <param name="value">Value of the color in the range from 0 to 65535. </param>
+        <returns>The current value of the channel.</returns>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -218,9 +218,9 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="value">To be added: an object of type 'bool'</param>
-        <returns>To be added: an object of type 'bool'</returns>
+        <summary>Enable/Disable support for an alpha channel for the color.</summary>
+        <param name="value">Whether to support an alpha channel or not.</param>
+        <returns>Curren rule for the use of the alpha channel.</returns>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -233,9 +233,9 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="value">To be added: an object of type 'uint'</param>
-        <returns>To be added: an object of type 'uint'</returns>
+        <summary>The red value for the color in the widget.</summary>
+        <param name="value">Value of the color in the range from 0 to 65535.</param>
+        <returns>The current value of the channel.</returns>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -247,7 +247,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Emitted when a color is selected in the color dialog.</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -264,11 +264,11 @@
         <Parameter Name="a" Type="System.UInt16&amp;" RefType="out" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="r">a <see cref="T:System.UInt16&amp;" /></param>
-        <param name="g">a <see cref="T:System.UInt16&amp;" /></param>
-        <param name="b">a <see cref="T:System.UInt16&amp;" /></param>
-        <param name="a">a <see cref="T:System.UInt16&amp;" /></param>
+        <summary>Get the UInt16s for the current color in the widget.</summary>
+        <param name="r">Location to store the red value.</param>
+        <param name="g">Location to store the green value.</param>
+        <param name="b">Location to store the blue value.</param>
+        <param name="a">Location to store the alpha value.</param>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -285,11 +285,11 @@
         <Parameter Name="a" Type="System.Double&amp;" RefType="out" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="r">a <see cref="T:System.Double&amp;" /></param>
-        <param name="g">a <see cref="T:System.Double&amp;" /></param>
-        <param name="b">a <see cref="T:System.Double&amp;" /></param>
-        <param name="a">a <see cref="T:System.Double&amp;" /></param>
+        <summary>Get the doubles for the current color in the widget.</summary>
+        <param name="r">Location to store the red value.</param>
+        <param name="g">Location to store the green value.</param>
+        <param name="b">Location to store the blue value.</param>
+        <param name="a">Location to store the alpha value.</param>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -306,11 +306,11 @@
         <Parameter Name="a" Type="System.Byte&amp;" RefType="out" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="r">a <see cref="T:System.Byte&amp;" /></param>
-        <param name="g">a <see cref="T:System.Byte&amp;" /></param>
-        <param name="b">a <see cref="T:System.Byte&amp;" /></param>
-        <param name="a">a <see cref="T:System.Byte&amp;" /></param>
+        <summary>Get the bytes for the current color in the widget.</summary>
+        <param name="r">Location to store the red value.</param>
+        <param name="g">Location to store the green value.</param>
+        <param name="b">Location to store the blue value.</param>
+        <param name="a">Location to store the alpha value.</param>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
