@@ -1,3 +1,7 @@
+2004-07-06  Peter Johanson <latexer@gentoo.org>
+
+	* en/Gnome/*.xml : docs for ColorPicker.
+
 2004-07-02  Mike Kestner  <mkestner@ximian.com>
 
 	* en/GLib/*.xml : more glib docs.
